# proyecto-formulario

./: .env.example  openapi.yaml  pyproject.toml  test.db
.github/workflows/: deploy_release  deploy_release.yml  run_unittest.yml
app/: config.py  database.py  dependencies.py  main.py  schemas.py
app/models/: enum.py  form.py
app/repositories/: form.py  formulario.py
app/routers/: admin.py  form.py  formulario.py
app/schemas/: form.py
app/services/: form.py  formulario.py
backend/: .env.example  docker-compose.yml  openapi.yaml
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py
backend/app/routes/: admin.py  form.py
backend/app/services/: form.py
backend/app/storage/: fake_storage.py
backend/tests/: conftest.py
backend/tests/routes/: conftest.py  test_admin_routes.py  test_form_routes.py
backend/tests/services/: conftest.py  test_form_services.py
frontend/: package-lock.json  package.json  pyproject.toml  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/components/: BadgeEstado.vue
frontend/src/router/: index.js
frontend/src/services/: formServices.js
frontend/src/views/: ConsultaEstadoView.vue  FormularioView.vue
frontend/tests/: test_articlesearch.py  test_duplicatepending.py  test_existingquery.py  test_invalidfile.py  test_invalidformat.py  test_nonexistentquery.py  test_unexistentclient.py  test_validcreation.py
tests/: conftest.py  test_admin.py  test_form.py
tests/routes/: conftest.py  test_form_routes.py
tests/services/: conftest.py  test_form_services.py
(+1 files in other folders)
